--- a/resources/scss/material-kit.scss
+++ b/resources/scss/material-kit.scss
@@ -21,7 +21,7 @@
  // Core Components
  @import "material-kit/layout";
  @import "material-kit/buttons";
- @import "material-kit/misc";
+ @import "custom/material-kit/misc"; //@import "material-kit/misc";
  @import "material-kit/checkboxes";
  @import "material-kit/custom-forms";
  @import "material-kit/switches";
