[update] Some update and test

--- a/resources/scss/custom/main.scss
+++ b/resources/scss/custom/main.scss
@@ -2,6 +2,10 @@
   background-image: url('../img/bg/jet.jpg');
 }
 
+.page-header.p750-background {
+    background-image: url('../img/bg/p750.jpeg');
+}
+
 .buttons-group {
   .btn {
     &:last-child {
