--- a/resources/scss/material-kit/_headers.scss
+++ b/resources/scss/material-kit/_headers.scss
@@ -76,3 +76,10 @@
     background: -moz-linear-gradient(-45deg, rgba(33, 97, 139, 0.88) 33%, rgba(19, 69, 103, 0.45) 100%);
     background: -webkit-linear-gradient(-45deg, rgba(33, 97, 139, 0.88) 33%, rgba(19, 69, 103, 0.45) 100%);
 }
+
+.dark-filter:after{
+    background: rgba(0, 0, 0, 0.65);
+    background: linear-gradient(-45deg, rgba(0, 0, 0, 0.65) 33%, rgba(19, 69, 103, 0.45) 100%);
+    background: -moz-linear-gradient(-45deg, rgba(0, 0, 0, 0.65) 33%, rgba(19, 69, 103, 0.45) 100%);
+    background: -webkit-linear-gradient(-45deg, rgba(0, 0, 0, 0.65) 33%, rgba(19, 69, 103, 0.45) 100%);
+}
