--- a/resources/scss/custom/main.scss
+++ b/resources/scss/custom/main.scss
@@ -115,6 +115,19 @@ footer {
   }
 }
 
+.youtube-container {
+    position: relative;
+    width: 100%;
+    height: 0;
+    padding-bottom: 56.25%;
+}
+.youtube-video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
 
 @media screen and (min-width: 991px) {
   .footer .title{
