--- a/resources/scss/custom/main.scss
+++ b/resources/scss/custom/main.scss
@@ -6,6 +6,11 @@
     background-image: url('../img/bg/p750.jpeg');
 }
 
+.page-header > .container {
+    margin-top: 75px;
+    margin-bottom: 30px;
+}
+
 .buttons-group {
   .btn {
       font-weight: bold;
