--- a/resources/scss/material-kit/_headers.scss
+++ b/resources/scss/material-kit/_headers.scss
@@ -1,5 +1,6 @@
 .page-header{
-    height: 100vh;
+    min-height: 100vh;
+    height: 100%;
     background-position: center center;
     background-size: cover;
     margin: 0;
